<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#f3f3f3"
    tools:context=".ViewTicketsActivity">

    <ViewStub
        android:id="@+id/progress_stub"
        android:inflatedId="@+id/progress_overlay"
        android:layout="@layout/progress_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/hero_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textColor="@color/dark_gray"
        android:text="@string/my_ticket_wallet"
        style="@style/Hero"/>

    <TextView
        android:id="@+id/validated_ticket_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/validated_ticket_wrapper"
        android:visibility="invisible"
        android:text="@string/validated_ticket"
        style="@style/SectionHeader" />

    <LinearLayout
        android:id="@id/validated_ticket_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:layout_above="@+id/available_tickets_text"
        android:onClick="showValidatedTicket"
        android:background="@drawable/card">

        <TextView
            android:id="@+id/validated_ticket_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/T1"
            style="@style/TicketCounter" />

        <TextView
            android:id="@+id/validated_ticket_time_left_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/TicketTimer" />

    </LinearLayout>

    <TextView
        android:id="@id/available_tickets_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/available_tickets_wrapper"
        android:layout_marginBottom="5dp"
        android:text="@string/available_tickets"
        style="@style/TitleLight"/>

    <LinearLayout
        android:id="@+id/available_tickets_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/more_tickets_text">

        <LinearLayout
            android:id="@+id/t1_counter_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:clickable="true"
            android:onClick="showTicket"
            style="@style/TicketCard">

            <TextView
                android:id="@+id/t1_counter_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                style="@style/TicketCounter" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/T1"
                android:background="@drawable/label"
                style="@style/TicketCounterLabel" />

        </LinearLayout>

        <View
            android:layout_width="10dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:id="@+id/t2_counter_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:clickable="true"
            android:onClick="showTicket"
            style="@style/TicketCard">

            <TextView
                android:id="@+id/t2_counter_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                style="@style/TicketCounter" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/T2"
                android:background="@drawable/label"
                style="@style/TicketCounterLabel" />

        </LinearLayout>

        <View
            android:layout_width="10dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:id="@+id/t3_counter_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:clickable="true"
            android:onClick="showTicket"
            style="@style/TicketCard">

            <TextView
                android:id="@+id/t3_counter_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                style="@style/TicketCounter" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/T3"
                android:background="@drawable/label"
                style="@style/TicketCounterLabel"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/more_tickets_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_tickets_button"
        android:layout_marginBottom="5dp"
        android:text="@string/more_tickets"
        style="@style/TitleLight"/>

    <Button
        android:id="@id/add_tickets_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="buyTickets"
        android:text="@string/buy_tickets"
        style="@style/FlatButton"/>

</RelativeLayout>
