<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".BuyTicketsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_more_tickets"
        style="@style/Hero"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buy_button"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/card"
        android:layout_marginBottom="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/T1"
                android:background="@drawable/label"
                style="@style/TicketCounterLabel" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/T2"
                android:background="@drawable/label"
                style="@style/TicketCounterLabel" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/T3"
                android:background="@drawable/label"
                style="@style/TicketCounterLabel" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarStyle">
            <Button
                android:id="@+id/t1_increment_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus_sign"
                android:onClick="increment"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/t2_increment_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus_sign"
                android:onClick="increment"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/t3_increment_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus_sign"
                android:onClick="increment"
                style="?android:attr/buttonBarButtonStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/t1_counter_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                style="@style/TicketCounter" />
            <TextView
                android:id="@+id/t2_counter_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                style="@style/TicketCounter" />
            <TextView
                android:id="@+id/t3_counter_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                style="@style/TicketCounter" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarStyle">
            <Button
                android:id="@+id/t1_decrement_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus_sign"
                android:onClick="decrement"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/t2_decrement_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus_sign"
                android:onClick="decrement"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/t3_decrement_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus_sign"
                android:onClick="decrement"
                style="?android:attr/buttonBarButtonStyle"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@id/buy_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="buy"
        android:text="@string/buy"
        style="@style/FlatButton"/>
</RelativeLayout>
